--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" xmlns: xmlns:>
 <head>
     <title>TODO supply a title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-<div><h1> Bienvenido al servicio Web </h1></div>
-<div><h3> Con las siguientes rutas podrá ver imagenes y tablas de base de datos. </h3></div>
-<div><a href=nodo.jpg>Imágen</a></div>
-<div><a href=dataBase>Base de Datos</a></div>
+<body background="logo.jpg">
+<div align="center"><h1> Servicio Mini Spark Web</h1></div>
+<span> <img src="logo.png"></span>
+<div align="center"><h3> Con los siguientes botones mostraremos la funcionalidad del proyecto. </h3></div>
+<div align="center" style="display": block">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <div><a href=logo.jpg class="btn btn-success">Pedir Imágen</a></div>
+<br>
+    <div><a href=dataBase class="btn btn-success"> Tabla base de datos</a></div>
+
+</div>
 </body>
+
 </html>
