--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -6,9 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body background="logo.jpg">
+<body background="fondo.jpg">
 <div align="center"><h1> Servicio Mini Spark Web</h1></div>
-<span> <img src="logo.png"></span>
 <div align="center"><h3> Con los siguientes botones mostraremos la funcionalidad del proyecto. </h3></div>
 <div align="center" style="display": block">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
